# -

./: .gitignore  README.md  init.sh  manage.py  pyproject.toml  readme  readme.txt  requests.http  reset.sh  start_example.sh
.github/workflows/: github-actions-demo.yml  main.yml
classes/: __init__.py  caching.py  kp.py  movie.py  note.py  statistic.py  tools.py
data/: api_response.json  api_response_2.json  archive_movies_dump.json  archive_movies_old.json  movies_to_watch_dump.json  movies_to_watch_old.json
features/: urls.py  views.py
filmoclub/: asgi.py  settings.py  urls.py  wsgi.py
lists/: __init__.py  admin.py  models.py  serializers.py  urls.py  utils.py  validators.py  views.py
lists/migrations/: 0001_initial.py
postcard/: apps.py  models.py  serializers.py  urls.py  views.py
pydantic_models/: __init__.py  kp_movie_api.py  rate_movie_request.py
static/css/: add_movie.css  based_layout.css  global_settings.css  movies.css  movies_cart.css  movies_corf.css  postcard.css  rating_modal.css  statistic.css  sticky_notes.css
static/js/: add_movie.js  cookie.js  (+4 more)
statistic/: urls.py  views.py
templates/: add_movie.html  based_layout.html  movies.html  movies_old.html  postcard.html  ratting_modal.html  statistc.html  statistic.html  stickynotes.html  test.html
tools/: serializers.py  urls.py  views.py
utils/: __init__.py  change_local_films_archive_status.py  dump_movies_to_bd.py  dump_movies_to_json.py  extract_movies_ids.js  get_api_token.py  kp_ids.js  movies_dump.json  movies_ids.py  request_kp_movie.py  save_kp_movie_to_bd.py  top_secret.py
(+74 files in other folders)
